# alfred

./: .env.example  .gitignore  .mcp.json.example  CLAUDE.md  README.md  main.py  plan.md  pyproject.toml  refactor.md  test_ai_integration.py
.alfred/: workflow_state.json
.claude/: settings.json
.claude/agents/: context-primer.md
.claude/hooks/: append_prompts.py  prompt-config.yaml
.serena/: project.yml
.taskmaster/: state.json
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  tasks.json
design_docs/alfred/: PRD.md  ai-integration.md  architecture.md  backend-adapters.md  configuration.md  data-models.md  plan.md
design_docs/tm/: PRD.md  ai-integration.md  architecture.md  backend-adapters.md  data-models.md  plan.md
docs/: workspace-tools.md
src/alfred/: __init__.py  mcp.py  server.py
temp_scripts/: test_workflow_discovery.py
temp_scripts/test_results/: refactored_adapter_20250827_082328.json  refactored_adapter_20250827_082656.json  refactored_workflow_20250827_082328.json  refactored_workflow_20250827_082656.json  workflow_states_all_20250827_081627.json  workflow_states_team_20250827_081627.json
tests/: conftest.py  test_ai_services.py  test_config.py  test_mcp_protocol.py  test_server.py
tests/adapters/: __init__.py  test_factory.py  test_linear_adapter.py
(+299 files in other folders)
